# kkpy

./: .buildinfo  .gitignore  .kkpy.io.html  .kkpy.util.html  LICENSE  MANIFEST.in  README.md  cm.html  environment.yml  genindex.html  index.html  install.html  io.html  kkpy.cm.html  kkpy.html  kkpy.io.html  kkpy.util.html  objects.inv  plot.html  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  tox.ini  util.html
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  docker-publish.yml  python-package.yml
.ipynb_checkpoints/: index-checkpoint.html  install-checkpoint.html  kkpy-checkpoint.html  kkpy.util-checkpoint.html
_downloads/0b83fe7b160cd0dd299124fe20ed7a09/: plot_dem.py
_downloads/143ee2a512b6dfd3c2ff98ae55c13e78/: ex_derivative.ipynb
_modules/: index.html
_modules/kkpy/: cm.html  io.html  plot.html  util.html
_sources/: .kkpy.util.rst.txt  cm.rst.txt  index.rst.txt  install.rst.txt  io.rst.txt  kkpy.rst.txt  plot.rst.txt
_sources/.ipynb_checkpoints/: install-checkpoint.rst.txt
_sources/auto_examples/: index.rst.txt  plot_cmap.rst.txt  plot_dem.rst.txt  plot_derivative.rst.txt  sg_execution_times.rst.txt
auto_examples/: index.html  plot_cmap.html  plot_dem.html  plot_derivative.html  sg_execution_times.html
binder/: environment.yml
docs/: conf.py  index.rst  kkpy.io.rst  util.rst
docs/.ipynb_checkpoints/: conf-checkpoint.py
docs/_build/doctrees/: .kkpy.cm.doctree  .kkpy.io.doctree  .kkpy.util.doctree  cm.doctree  environment.pickle  index.doctree  (+7 more)
examples/: README.rst  plot_cmap.py  plot_dem.py  plot_derivative.py
kkpy/: __init__.py  cm.py  io.py  plot.py  util.py
kkpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
kkpy/.ipynb_checkpoints/: io-checkpoint.py
notebooks/auto_examples/: plot_cmap.ipynb  plot_dem.ipynb
tests/: test_io.py  test_util.py
tests/.ipynb_checkpoints/: test-checkpoint.py
(+25 files in other folders)
