[tool.poetry]
name = "kkpy"
version = "0.1.0"
description = ""
authors = ["Kwonil Kim <kwonil.kim.0@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.4"
Cartopy = "^0.18.0"
wradlib = "^1.9.0"
arm-pyart = "^1.11.3"
matplotlib = "^3.3.3"
haversine = "^2.3.0"
scipy = "^1.5.4"
dask = "^2020.12.0"
pandas = "^1.1.5"
netCDF4 = "^1.5.5"
geopandas = "^0.8.1"
descartes = "^1.1.0"
xarray = "^0.16.2"
Bottleneck = "^1.3.2"
scikit-image = "^0.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
