[tool.poetry]
name = "kkpy"
version = "0.1.0"
description = ""
authors = ["Kwonil Kim <kwonil.kim.0@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.4"
Cartopy = "^0.20.1"
arm-pyart = "^1.11.3"
matplotlib = "^3.3.3"
haversine = "^2.3.0"
scipy = "^1.5.4"
dask = "^2021.4.0"
pandas = "^1.3.0"
netCDF4 = "^1.5.5"
geopandas = "^0.10.1"
descartes = "^1.1.0"
xarray = "^0.20.1"
Bottleneck = "^1.3.2"
scikit-image = "^0.18.0"
numba = "^0.53.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
